@@ -4,6 +4,7 @@ Pint Changelog
 0.25 (unreleased)
 -----------------
 
+- Added mu and mc as alternatives for SI micro prefix
 - Added ℓ as alternative for liter
 - Support permille units and `‰` symbol (PR #2033, Issue #1963)
 
